rewrote fsSpace. to be consitent with other spaces and to provide a much better user experience, uris point to files and directories. dereferencing them yeilds and obj that is the contents of that file. Content-Type probing is used to dtermine what the binary format of the file is an whether to use HTML, shell script, JSON, mtron, markdown, etc. as the renderer to the respective mtron encodings of those types. Super clean, simplified fsSpace, win win all around. down town julie brown.